--- a/python/src/OrthogonalProductFunctionFactory_doc.i.in
+++ b/python/src/OrthogonalProductFunctionFactory_doc.i.in
@@ -1,17 +1,12 @@
 %feature("docstring") OT::OrthogonalProductFunctionFactory
 "Base class for orthogonal multivariate functions.
 
-Available constructors:
-        OrthogonalProductFunctionFactory(*functions*)
-
-        OrthogonalProductFunctionFactory(*functions, enumerateFunction*)
-
 Parameters
 ----------
 functions : list of :class:`~openturns.OrthogonalUniVariateFunctionFamily`
     List of orthogonal univariate function factories with the same
     dimension as the orthogonal basis.
-enumerateFunction : :class:`~openturns.EnumerateFunction`
+enumerateFunction : :class:`~openturns.EnumerateFunction`, optional
     Associates to an integer its multi-index image in the :math:`\Nset^d`
     dimension, which is the dimension of the basis. This multi-index represents
     the collection of degrees of the univariate polynomials.
