--- a/python/src/CorrelationAnalysis_doc.i.in
+++ b/python/src/CorrelationAnalysis_doc.i.in
@@ -19,12 +19,13 @@ LinearModelAlgorithm
 Examples
 --------
 >>> import openturns as ot
+>>> ot.RandomGenerator.SetSeed(0)
 >>> firstSample = ot.Normal(3).getSample(100)
 >>> model = ot.SymbolicFunction(['x', 'y', 'z'], ['x + 3 * y - 5 * z'])
 >>> secondSample = model(firstSample)
->>> corr_analysis = ot.CorrelationAnalysis(firstSample, secondSample)
->>> print(corr_analysis.computeLinearCorrelation())
-[0.153352,0.537644,-0.760563]"
+>>> correlationAnalysis = ot.CorrelationAnalysis(firstSample, secondSample)
+>>> cor = correlationAnalysis.computeLinearCorrelation()
+"
 
 // ---------------------------------------------------------------------
 
