--- a/python/src/GeneralizedPareto_doc.i.in
+++ b/python/src/GeneralizedPareto_doc.i.in
@@ -85,8 +85,8 @@ Create a distribution:
 
 Create it from a Pareto distribution:
 
->>> myPareto = Pareto(1.0, 2.0, 3.0)
->>> dist1 = ot.GeneralizedPareto(myPareto)
+>>> pareto = ot.Pareto(1.0, 2.0, 3.0)
+>>> dist1 = ot.GeneralizedPareto(pareto)
 
 Draw a sample:
 
