--- a/python/src/Ipopt_doc.i.in
+++ b/python/src/Ipopt_doc.i.in
@@ -76,7 +76,7 @@ Inequality constraints are defined by a function :math:`h` such that :math:`h(x)
 >>> algo.setStartingPoint([0,0,0,0])
 >>> algo.setMaximumCallsNumber(1000)
 >>> algo.setMaximumIterationNumber(1000)
->>> ot.ResourceMap.AddAsScalar('Ipopt-max_cpu_time', 5.0)
+>>> algo.setMaximumTimeDuration(5.0)
 
 >>> # Running the solver
 >>> algo.run() # doctest: +SKIP
