--- a/python/src/QuadraticBasisFactory_doc.i.in
+++ b/python/src/QuadraticBasisFactory_doc.i.in
@@ -19,7 +19,7 @@ BasisFactory, ConstantBasisFactory, LinearBasisFactory
 Examples
 --------
 >>> import openturns as ot
->>> basis = QuadraticBasisFactory(2).build()
+>>> basis = ot.QuadraticBasisFactory(2).build()
 >>> f = ot.AggregatedFunction(basis)
 >>> x = [2, 3]
 >>> print(f(x))
