--- a/lib/etc/openturns.conf.in
+++ b/lib/etc/openturns.conf.in
@@ -108,6 +108,13 @@
 
   <!-- OT::Contour parameters -->
   <Contour-DefaultLevelsNumber value_int="10" />
+  <Contour-DefaultIsFilled value_bool="false"        />
+  <Contour-DefaultDrawLabels value_bool="true"       />
+  <Contour-DefaultColorMapNorm value_str="linear"            />
+  <Contour-DefaultColorMap value_str="hsv"       />
+  <Contour-DefaultColorBarPosition value_str="right" />
+  <Contour-DefaultExtend value_str="both"            />
+  <Contour-DefaultAlpha value_float="1.0"            />
 
   <!-- OT::IntervalMesher parameters -->
   <IntervalMesher-UseDiamond value_bool="false" />
