Apply suggestions from code review

--- a/python/src/LeastSquaresProblem_doc.i.in
+++ b/python/src/LeastSquaresProblem_doc.i.in
@@ -5,7 +5,7 @@ This represents a least-squares problem:
 
 .. math::
 
-    \min_{x} ||f(x)||^2_2
+    \min_{x} ||f(\vect{x})||^2_2
 
 where *f* is the residual function.
 
