--- a/lib/src/Uncertainty/Distribution/CMakeLists.txt
+++ b/lib/src/Uncertainty/Distribution/CMakeLists.txt
@@ -26,6 +26,7 @@ ot_add_source_file (ChiSquare.cxx)
 ot_add_source_file (ChiSquareFactory.cxx)
 ot_add_source_file (ClaytonCopula.cxx)
 ot_add_source_file (ClaytonCopulaFactory.cxx)
+ot_add_source_file (CombinationsDistribution.cxx)
 ot_add_source_file (CompositeDistribution.cxx)
 ot_add_source_file (DeconditionedDistribution.cxx)
 ot_add_source_file (PointConditionalDistribution.cxx)
@@ -207,6 +208,7 @@ ot_install_header_file (ChiSquare.hxx)
 ot_install_header_file (ChiSquareFactory.hxx)
 ot_install_header_file (ClaytonCopula.hxx)
 ot_install_header_file (ClaytonCopulaFactory.hxx)
+ot_install_header_file (CombinationsDistribution.hxx)
 ot_install_header_file (CompositeDistribution.hxx)
 ot_install_header_file (DeconditionedDistribution.hxx)
 ot_install_header_file (PointConditionalDistribution.hxx)
