--- a/lib/test/CMakeLists.txt
+++ b/lib/test/CMakeLists.txt
@@ -356,6 +356,7 @@ ot_check_test (ChiSquareFactory_std)
 ot_check_test (BlockIndependentCopula_std)
 ot_check_test (JointDistribution_std)
 ot_check_test (JointDistribution_large)
+ot_check_test (CombinationsDistribution_std)
 ot_check_test (CompositeDistribution_std)
 ot_check_test (DeconditionedDistribution_std)
 ot_check_test (CumulativeDistributionNetwork_std)
