--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -442,6 +442,7 @@ ot_pyinstallcheck_test (ClaytonCopulaFactory_std)
 ot_pyinstallcheck_test (BlockIndependentCopula_std)
 ot_pyinstallcheck_test (JointDistribution_std)
 ot_pyinstallcheck_test (JointDistribution_large)
+ot_pyinstallcheck_test (CombinationsDistribution_std)
 ot_pyinstallcheck_test (CompositeDistribution_std)
 ot_pyinstallcheck_test (DeconditionedDistribution_std)
 ot_pyinstallcheck_test (PointConditionalDistribution_std IGNOREOUT)
