--- a/python/src/LeastSquaresProblem_doc.i.in
+++ b/python/src/LeastSquaresProblem_doc.i.in
@@ -5,7 +5,7 @@ This represents a least-squares problem:
 
 .. math::
 
-    \min_{x} \frac{1}{2}||f(x)||^2
+    \min_{x} ||f(\vect{x})||^2_2
 
 where *f* is the residual function.
 
@@ -17,5 +17,5 @@ residualFunction : :class:`~openturns.Function`
 Examples
 --------
 >>> import openturns as ot
->>> residualFunction = ot.SymbolicFunction(['x0', 'x1'], ['10*(x1-x0^2)', '0.5-x0', '0.3-2*x1'])
+>>> residualFunction = ot.SymbolicFunction(['x0', 'x1'], ['10 * (x1 - x0^2)', '0.5 - x0', '0.3 - 2 * x1'])
 >>> problem = ot.LeastSquaresProblem(residualFunction)"
