--- a/lib/src/Uncertainty/Algorithm/MetaModel/FunctionalChaos/CMakeLists.txt
+++ b/lib/src/Uncertainty/Algorithm/MetaModel/FunctionalChaos/CMakeLists.txt
@@ -9,6 +9,7 @@ ot_add_source_file (FixedStrategy.cxx)
 ot_add_source_file (FunctionalChaosAlgorithm.cxx)
 ot_add_source_file (FunctionalChaosResult.cxx)
 ot_add_source_file (FunctionalChaosSobolIndices.cxx)
+ot_add_source_file (FunctionalChaosValidation.cxx)
 ot_add_source_file (ProjectionStrategy.cxx)
 ot_add_source_file (ProjectionStrategyImplementation.cxx)
 ot_add_source_file (LeastSquaresExpansion.cxx)
@@ -28,6 +29,7 @@ ot_install_header_file (LeastSquaresExpansion.hxx)
 ot_install_header_file (IntegrationExpansion.hxx)
 ot_install_header_file (LeastSquaresStrategy.hxx)
 ot_install_header_file (FunctionalChaosAlgorithm.hxx)
+ot_install_header_file (FunctionalChaosValidation.hxx)
 ot_install_header_file (OTFunctionalChaos.hxx)
 ot_install_header_file (AdaptiveStrategyImplementation.hxx)
 ot_install_header_file (ProjectionStrategy.hxx)
