FCValidation and LMValidation: C++ unit tests
Apply suggestions from code review

Co-authored-by: Sofiane Haddad <sofianehaddad@users.noreply.github.com>

--- a/lib/test/CMakeLists.txt
+++ b/lib/test/CMakeLists.txt
@@ -633,6 +633,8 @@ ot_check_test (FunctionalChaos_ishigami_sparse)
 ot_check_test (FunctionalChaos_ishigami_database)
 ot_check_test (FunctionalChaos_nd)
 ot_check_test (FunctionalChaos_2d)
+ot_check_test (FunctionalChaosValidation_ishigami IGNOREOUT)
+ot_check_test (FunctionalChaosValidation_2d IGNOREOUT)
 ot_check_test (LeastSquaresExpansion_std IGNOREOUT)
 ot_check_test (IntegrationExpansion_std IGNOREOUT)
 ot_check_test (KrigingAlgorithm_std)
@@ -643,6 +645,7 @@ ot_check_test (MetaModelValidation_std)
 ot_check_test (GeneralLinearModelAlgorithm_std IGNOREOUT)
 ot_check_test (LinearModelAlgorithm_std)
 ot_check_test (LinearModelAnalysis_std)
+ot_check_test (LinearModelValidation_std IGNOREOUT)
 ot_check_test (KrigingAlgorithm_isotropic_std IGNOREOUT)
 ot_check_test (OrthogonalProductPolynomialFactory_std)
 
