--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -747,6 +747,7 @@ ot_pyinstallcheck_test (FunctionalChaos_gsobol_sparse)
 ot_pyinstallcheck_test (FunctionalChaos_mixed IGNOREOUT)
 ot_pyinstallcheck_test (FunctionalChaos_nd)
 ot_pyinstallcheck_test (FunctionalChaosSobolIndices_std)
+ot_pyinstallcheck_test (FunctionalChaosValidation_std IGNOREOUT)
 ot_pyinstallcheck_test (LeastSquaresExpansion_std IGNOREOUT)
 ot_pyinstallcheck_test (IntegrationExpansion_std IGNOREOUT)
 ot_pyinstallcheck_test (KrigingAlgorithm_std)
@@ -766,6 +767,7 @@ endif ()
 ot_pyinstallcheck_test (LinearModelAlgorithm_std)
 ot_pyinstallcheck_test (LinearModelAnalysis_std)
 ot_pyinstallcheck_test (LinearModelStepwiseAlgorithm_std)
+ot_pyinstallcheck_test (LinearModelValidation_std IGNOREOUT)
 ot_pyinstallcheck_test (KrigingAlgorithm_isotropic_std IGNOREOUT)
 ot_pyinstallcheck_test (FieldToPointFunctionalChaosAlgorithm_std IGNOREOUT)
 ot_pyinstallcheck_test (FieldFunctionalChaosSobolIndices_std IGNOREOUT)
