--- a/distro/debian/control
+++ b/distro/debian/control
@@ -29,6 +29,8 @@ Build-Depends: debhelper-compat (= 12),
                libspectra-dev,
                libtbb-dev,
                libxml2-dev,
+               libnanoflann-dev,
+               libcuba-dev,
                python3-dev,
                swig
 Standards-Version: 4.6.0
@@ -37,7 +39,7 @@ Vcs-Browser: https://salsa.debian.org/science-team/openturns
 Vcs-Git: https://salsa.debian.org/science-team/openturns.git
 Rules-Requires-Root: no
 
-Package: libopenturns0.23
+Package: libopenturns0.24
 Section: libs
 Architecture: any
 Depends: ${shlibs:Depends},
@@ -63,7 +65,7 @@ Section: libdevel
 Architecture: any
 Depends: ${misc:Depends},
          libceres-dev,
-         libopenturns0.23 (= ${binary:Version})
+         libopenturns0.24 (= ${binary:Version})
 Description: headers and development libraries for OpenTURNS
  OpenTURNS is a powerful and generic tool to treat and quantify
  uncertainties in numerical simulations in design, optimization and
@@ -102,7 +104,7 @@ Section: python
 Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
-         libopenturns0.23 (= ${binary:Version}),
+         libopenturns0.24 (= ${binary:Version}),
          ${python3:Depends}
 Provides: ${python3:Provides}
 Suggests: python3-matplotlib,
